Changed About Us Section Info

--- a/index.html
+++ b/index.html
@@ -183,10 +183,7 @@
 				</div>
 				<div class="col-sm v-center">
 					<p>
-						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam
-						enim provident dolorum hic officiis nemo nihil nostrum
-						exercitationem, architecto commodi voluptatum deserunt, ad sunt
-						vero! Quod consequatur consectetur corrupti maxime?
+						This is Page Was Developed by Me and Saad to Present  Products on a slider 
 					</p>
 				</div>
 			</div>
